--- a/src/app/admin-user/admin-user.component.html
+++ b/src/app/admin-user/admin-user.component.html
@@ -7,8 +7,8 @@
 			</li>
 		</ul>
 		    
-		<p>
-			<a [routerLink]="['/login']">Logout</a>
-		</p>
+<!-- 		<p> -->
+<!-- 			<a [routerLink]="['/login']">Logout</a> -->
+<!-- 		</p> -->
 	</div>
 </div>
