--- a/src/app/_sastlight-client-requests/client-request.component.html
+++ b/src/app/_sastlight-client-requests/client-request.component.html
@@ -9,7 +9,7 @@
 <br>
 <div class="example-container mat-elevation-z8" matSort>
 
-	<div class="spinner-container" *ngIf="applications.length<=0">
+	<div class="spinner-container" *ngIf="requestList.length<=0">
 		<mat-spinner></mat-spinner>
 	</div>
 
@@ -36,23 +36,49 @@
 		  </mat-checkbox>
 		</mat-cell>
 	</ng-container>
-		<!-- id Column -->
-		<ng-container matColumnDef="id">
-		  <mat-header-cell *matHeaderCellDef mat-sort-header> Id. </mat-header-cell>
-		  <mat-cell *matCellDef="let app"> {{app.id}} </mat-cell>
+		<!-- P_DES Column -->
+		<ng-container matColumnDef="P_DES">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>Project Name</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.P_DES}} </mat-cell>
 		</ng-container>
 		
-		<!-- Name Column -->
-		<ng-container matColumnDef="name">
-		  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-		  <mat-cell *matCellDef="let app"> {{app.name}} </mat-cell>
+		<!-- P_APP Column -->
+		<ng-container matColumnDef="P_APP">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>Application</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.P_APP}} </mat-cell>
 		</ng-container>
 		
-		<!-- Descriptcion Column -->
-		<ng-container matColumnDef="descriptcion">
-		  <mat-header-cell *matHeaderCellDef mat-sort-header> Desc. </mat-header-cell>
-		  <mat-cell *matCellDef="let app"> {{app.description}} </mat-cell>
+		<!-- P_PRO Column -->
+		<ng-container matColumnDef="P_PRO">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>Project</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.P_PRO}} </mat-cell>
 		</ng-container>
+
+		<!-- P_CLI Column -->
+		<ng-container matColumnDef="P_CLI">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>Client</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.P_CLI}} </mat-cell>
+		</ng-container>
+
+		<!-- PM_BA Column -->
+		<ng-container matColumnDef="PM_BA">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>Bussines Area</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.PM_BA}} </mat-cell>
+		</ng-container>
+		
+		<!-- PM_FC Column -->
+		<ng-container matColumnDef="PM_FC">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>Functional Comunity</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.PM_FC}} </mat-cell>
+		</ng-container>
+		
+		<!-- P_NUMTEC Column -->
+		<ng-container matColumnDef="P_NUMTEC">
+		  <mat-header-cell *matHeaderCellDef mat-sort-header>#Technologies</mat-header-cell>
+		  <mat-cell *matCellDef="let app"> {{app.P_NUMTEC}} </mat-cell>
+		</ng-container>
+		
+		
 		
 		<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
 		
