--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,25 +4,76 @@
 <!-- 	</div> -->
 	
 <!-- 	<h2>SAST Light Applications List</h2> -->
-	<div class="grid grid-pad">
-		<div *ngFor="let app of applications" class="col-1-4">
-			<mat-card class="example-card"> 
-				<mat-card-header>
-					<div mat-card-avatar class="example-header-image">
-					</div>
-					<mat-card-title>{{app.name}}</mat-card-title> 
-					<mat-card-subtitle>{{app.description}}</mat-card-subtitle> 
-				</mat-card-header>
-				<mat-card-content>
-					<p>
-						Lorem Ipsum...
-					</p>
-				</mat-card-content> <mat-card-actions>
-			<button mat-button routerLink="/detail/{{app.id}}">Details</button>
-			<button mat-button>Releasses</button>
-			</mat-card-actions> </mat-card>
-<!-- 		</a> -->
-		</div>
-	</div>
+<!-- 	<div class="grid grid-pad">  -->
+	
+<!-- 		<div class="col-1-2"> -->
+			
+<!-- 		</div> -->
+<!-- 		<div class="col-1-2"> -->
+<!-- 			<mat-card class="graph-card">  -->
+<!-- 				<mat-card-header> -->
+<!-- 					<mat-card-title>Request</mat-card-title>  -->
+<!-- 					<mat-card-subtitle>Ordered by Area</mat-card-subtitle>  -->
+<!-- 				</mat-card-header> -->
+<!-- 				<mat-card-content> -->
+				
+<!-- 					<div [hidden]="!chart2"> -->
+<!-- 						<canvas id="canvas2">{{ chart2 }}</canvas> -->
+<!-- 					</div> -->
+					
+<!-- 				</mat-card-content>  -->
+<!-- 				<mat-card-actions> -->
+<!-- 					<button mat-button routerLink="/detail/">Details</button> -->
+<!-- 					<button mat-button>Releasses</button> -->
+<!-- 				</mat-card-actions>  -->
+<!-- 			</mat-card> -->
+<!-- 		</div> -->
+<!-- 	</div> -->
+
+
+	
+
+	<mat-grid-list cols="3" rowHeight="2:1"  rowWidth="400px">
+	
+<!-- 	  <mat-grid-tile> -->
+<!-- 	  	<mat-card class="graph-card">  -->
+<!-- 			<mat-card-header> -->
+<!-- 				<mat-card-title>Request</mat-card-title>  -->
+<!-- 				<mat-card-subtitle>Ordered by Area</mat-card-subtitle>  -->
+<!-- 			</mat-card-header> -->
+<!-- 			<mat-card-content> -->
+			
+<!-- 				<div [hidden]="!chart"> -->
+<!-- 					<canvas id="canvas">{{ chart }}</canvas> -->
+<!-- 				</div> -->
+				
+<!-- 			</mat-card-content>  -->
+<!-- 			<mat-card-actions> -->
+<!-- 				<button mat-button routerLink="/detail/">Details</button> -->
+<!-- 				<button mat-button>Releasses</button> -->
+<!-- 			</mat-card-actions>  -->
+<!-- 		</mat-card> -->
+<!-- 	  </mat-grid-tile> -->
+
+	  
+	  
+	  <mat-grid-tile *ngFor="let chart of graphsInfo; let i = index">
+	  	<mat-card  [hidden]="!SHOW_CHARTS" class="graph-card"> 
+			<mat-card-header>
+				<mat-card-title>Test</mat-card-title> 
+				<mat-card-subtitle>Test</mat-card-subtitle> 
+			</mat-card-header>
+			<mat-card-content>
+				<div>
+					<canvas [attr.id]="'iCanvas_' + chart.index">{{ chart2 }}</canvas>
+				</div>
+			</mat-card-content> 
+		</mat-card>
+	  </mat-grid-tile>
+	  
+	  
+	  
+	   
+	</mat-grid-list>
 
 </div>
